--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <form id="binaryconverter">
         <div class="form-group center">
           <input id="number" type="number">
-          <button id="check" type="submit" class="button">CHECK!</button>
+          <button id="convert" type="submit" class="button">CONVERT!</button>
         </div>
       </form>
       <div id="result" class="center">
